Fix Go search button flickering (regression)

--- a/stylesheets/less/modules/mf-search.less
+++ b/stylesheets/less/modules/mf-search.less
@@ -5,8 +5,7 @@ Change-Id: Id7715a83f8dc42cbdb23d8cbf982801606236f7c
 */
 @import "../mf-mixins.less";
 
-html.page-loading,
-html.jsSearch {
+.jsEnabled {
 	input.searchSubmit {
 		display: none;
 	}
